Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22244

Crash when opening a project

    XMLWordPrintable

Details

    • d34eb692fefbeaf6080ffbc150ea4d9b414420f7

    Description

      Recently I've downloaded the latest code from Qt Creator master branch (previous code state was February 25), and after that a dummy project that I run inside of the Creator's build started crashing on launch. New project (created in the latest build) works fine, old project (created in Qt Design Studio 1.1.0) crashes build instantly on project launch.

      I'm attaching an archived crashing project and a call stack. Latest committer in the last step of the call stack is hjk.

       	b833ec24()	Unknown
       	[Frames below may be incorrect and/or missing]	
      >	QmlProjectManagerd4.dll!QmlProjectManager::QmlProjectRunConfiguration::{ctor}::__l2::<lambda>(Utils::Environment env) Line 285	C++
       	QmlProjectManagerd4.dll!QmlProjectManager::QmlProjectRunConfiguration::{ctor}::__l5::<lambda>() Line 293	C++
       	[External Code]	
       	ProjectExplorerd4.dll!ProjectExplorer::EnvironmentAspect::BaseEnvironment::unmodifiedBaseEnvironment() Line 141	C++
       	ProjectExplorerd4.dll!ProjectExplorer::EnvironmentAspect::environment() Line 77	C++
       	QmlProjectManagerd4.dll!QmlProjectManager::QmlProjectRunConfiguration::runnable() Line 329	C++
       	Debuggerd4.dll!Debugger::Internal::DebuggerPluginPrivate::extensionsInitialized::__l2::<lambda>(ProjectExplorer::RunConfiguration * runConfig) Line 2089	C++
       	[External Code]	
       	ProjectExplorerd4.dll!ProjectExplorer::RunWorkerFactory::canRun(ProjectExplorer::RunConfiguration * runConfiguration, Core::Id runMode) Line 91	C++
       	[External Code]	
       	ProjectExplorerd4.dll!std::_Call_binder<std::_Unforced,0,1,2,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::tuple<std::_Ph<1>,ProjectExplorer::RunConfiguration *,Core::Id>,std::tuple<ProjectExplorer::RunWorkerFactory * const &> >(std::_Invoker_ret<std::_Unforced,0> __formal, std::integer_sequence<unsigned int,0,1,2> __formal, bool(const ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *, Core::Id) & _Obj, std::tuple<std::_Ph<1>,ProjectExplorer::RunConfiguration *,Core::Id> & _Tpl, std::tuple<ProjectExplorer::RunWorkerFactory * const &> && _Ut) Line 1858	C++
       	ProjectExplorerd4.dll!std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &>::operator()<ProjectExplorer::RunWorkerFactory * const &>(ProjectExplorer::RunWorkerFactory * const & <_Unbargs_0>) Line 1914	C++
       	ProjectExplorerd4.dll!std::any_of<QList<ProjectExplorer::RunWorkerFactory *>::const_iterator,std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> >(const QList<ProjectExplorer::RunWorkerFactory *>::const_iterator _First, const QList<ProjectExplorer::RunWorkerFactory *>::const_iterator _Last, std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> _Pred) Line 527	C++
       	ProjectExplorerd4.dll!Utils::anyOf<QList<ProjectExplorer::RunWorkerFactory *>,std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> >(const QList<ProjectExplorer::RunWorkerFactory *> & container, std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> predicate) Line 57	C++
       	ProjectExplorerd4.dll!Utils::contains<QList<ProjectExplorer::RunWorkerFactory *>,std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> >(const QList<ProjectExplorer::RunWorkerFactory *> & container, std::_Binder<std::_Unforced,bool (__thiscall ProjectExplorer::RunWorkerFactory::*)(ProjectExplorer::RunConfiguration *,Core::Id)const ,std::_Ph<1> const &,ProjectExplorer::RunConfiguration * &,Core::Id &> function) Line 110	C++
       	ProjectExplorerd4.dll!ProjectExplorer::RunControl::canRun(ProjectExplorer::RunConfiguration * runConfig, Core::Id runMode) Line 464	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::canRunStartupProject(Core::Id runMode, QString * whyNot) Line 3009	C++
       	Debuggerd4.dll!Debugger::Internal::DebuggerPluginPrivate::updatePresetState() Line 1465	C++
       	Debuggerd4.dll!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__thiscall Debugger::Internal::DebuggerPluginPrivate::*)(void)>::call(void(Debugger::Internal::DebuggerPluginPrivate::*)() f, Debugger::Internal::DebuggerPluginPrivate * o, void * * arg) Line 152	C++
       	Debuggerd4.dll!QtPrivate::FunctionPointer<void (__thiscall Debugger::Internal::DebuggerPluginPrivate::*)(void)>::call<QtPrivate::List<>,void>(void(Debugger::Internal::DebuggerPluginPrivate::*)() f, Debugger::Internal::DebuggerPluginPrivate * o, void * * arg) Line 185	C++
       	Debuggerd4.dll!QtPrivate::QSlotObject<void (__thiscall Debugger::Internal::DebuggerPluginPrivate::*)(void),QtPrivate::List<>,void>::impl(int which, QtPrivate::QSlotObjectBase * this_, QObject * r, void * * a, bool * ret) Line 414	C++
       	Qt5Cored.dll!6716db9f()	Unknown
       	Qt5Cored.dll!671a1582()	Unknown
       	Qt5Cored.dll!671a1071()	Unknown
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::updateRunActions() Line 455	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::activeRunConfigurationChanged() Line 2896	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::activeTargetChanged() Line 2883	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::startupProjectChanged() Line 2854	C++
       	ProjectExplorerd4.dll!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(void)>::call(void(ProjectExplorer::ProjectExplorerPluginPrivate::*)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 152	C++
       	ProjectExplorerd4.dll!QtPrivate::FunctionPointer<void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(void)>::call<QtPrivate::List<>,void>(void(ProjectExplorer::ProjectExplorerPluginPrivate::*)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 185	C++
       	ProjectExplorerd4.dll!QtPrivate::QSlotObject<void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(void),QtPrivate::List<>,void>::impl(int which, QtPrivate::QSlotObjectBase * this_, QObject * r, void * * a, bool * ret) Line 414	C++
       	Qt5Cored.dll!6716db9f()	Unknown
       	Qt5Cored.dll!671a1582()	Unknown
       	Qt5Cored.dll!671a1071()	Unknown
       	ProjectExplorerd4.dll!ProjectExplorer::SessionManager::startupProjectChanged(ProjectExplorer::Project * _t1) Line 280	C++
       	ProjectExplorerd4.dll!ProjectExplorer::SessionManager::setStartupProject(ProjectExplorer::Project * startupProject) Line 365	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::openProject(const QString & fileName) Line 1950	C++
       	ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::openProjectWelcomePage(const QString & fileName) Line 1938	C++
       	ProjectExplorerd4.dll!ProjectExplorer::Internal::ProjectDelegate::editorEvent(QEvent * ev, QAbstractItemModel * __formal, const QStyleOptionViewItem & __formal, const QModelIndex & idx) Line 491	C++
       	Qt5Widgetsd.dll!644b0f92()	Unknown
       	Qt5Widgetsd.dll!644abf3b()	Unknown
       	Qt5Widgetsd.dll!644adb7c()	Unknown
       	Qt5Widgetsd.dll!6453aeeb()	Unknown
       	Qt5Widgetsd.dll!641be58d()	Unknown
       	[External Code]	
       	Qt5Widgetsd.dll!6416f6e8()	Unknown
       	Qt5Widgetsd.dll!642c1ca9()	Unknown
       	Qt5Cored.dll!6715a347()	Unknown
       	Qt5Widgetsd.dll!6417889c()	Unknown
       	Qt5Widgetsd.dll!64174e7c()	Unknown
       	[External Code]	
       	Qt5Cored.dll!67165810()	Unknown
       	Qt5Qmld.dll!6566138f()	Unknown
       	Qt5Qmld.dll!6565cabc()	Unknown
       	[External Code]	
       	Qt5Cored.dll!6715977c()	Unknown
       	Qt5Cored.dll!67159668()	Unknown
       	Qt5Widgetsd.dll!6417a573()	Unknown
       	Qt5Widgetsd.dll!641f64fb()	Unknown
       	Qt5Widgetsd.dll!641f5180()	Unknown
       	Qt5Widgetsd.dll!641788bb()	Unknown
       	Qt5Widgetsd.dll!641748e5()	Unknown
       	Qt5Widgetsd.dll!64186de1()	Unknown
       	Qt5Cored.dll!671a2b2b()	Unknown
       	Qt5Cored.dll!671f961f()	Unknown
       	Qt5Cored.dll!6715a2bc()	Unknown
       	Qt5Cored.dll!6736c415()	Unknown
       	[External Code]	
      
      

       

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-22244
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            algerman Aleksei German
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes